static/css/base.css
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap');

html {
    height: 100%;
}

.hero-img {
    background: url("/media/home_bg.jpg");
    background-repeat: no-repeat;
    background-size: contain;
    height: 276px;
    width: auto;
    background-position: center;
       
}

.margin-index { 
    margin-bottom: 20%;
}

ul {
    margin-bottom: 0px;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }
  }
  
  /* fixed top navbar only on medium and up */
  @media (min-width: 992px) {
      .fixed-top-desktop-only {
          position: fixed;
          top: 0;
          right: 0;
          left: 0;
          z-index: 1030;
      }
    }


    @media (max-width: 600px) {
        .header-container {
            padding-top: 50px;
        }
      }


      @media (max-width: 400px) {
        .header-container {
            padding-top: 100px;
        }
      }


      @media (max-width: 320px) {
        .header-container {
            padding-top: 150px;
        }
      }

 .nav-bg-color {
          background-color: #88daf3;
      }

.logo-font {
    font-family: DM Serif Text;
    text-shadow: 2px 2px #000;
}

.nav-font {
    font-family: Quicksand;
    text-shadow: 2px 2px #000;
    font-size: 1.2em;
}

.subtitle-font {
    font-family: Quicksand;
    color: #fff;
    font-size: 2em;
    font-weight: 700;
}

.subtitle-font:hover {
    color: #000;
}
.index-font {
    Font-family: Quicksand;
    Font-size: 4rem;
}

.dropdown-font {
    font-family: Quicksand;
    font-weight: 700;
    font-size: 1.5vw;
}

.navbar-padding {
    padding: 0rem;
}

.list-font {
    font-family: Quicksand;
    font-size: 1.2vw;
}

.navbar {
    position: absolute;
    z-index: 1;
    background-color: #88daf3;
}

.con .btn {
    position: absolute;
    top: 85%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    cursor: pointer;
    border-radius: 5px;
    text-align: center;
    opacity: 1;
    font-family: Quicksand;
    font-weight: 700;
  }

.btn:hover {
    opacity: 0.7;
}

  .header-container {
      margin-bottom: 5%;
  }

  .dropdown-font {
      font-family: Quicksand;
      font-size: 1.2rem;
      font-weight: 500;
  }

  .footer-style {
      background-color: #88daf3;
      font-family: Quicksand;
      padding-top: 20px;
  }

  .fa-footer {
      color: #000;
      justify-content: center;
  }

  .fa-footer:hover {
      color:#000;
      opacity: 0.7;
  }
  
  .img-border {
      border: solid 1px rgba(87, 85, 85, 0.411);
      border-radius: 10px;
  }

  .heading-font {
      font-family: Quicksand;
      font-weight: 500;
  }

  .product-font {
      font-family: Quicksand;
      Font-weight: 500;
      
  }

  .btt-link,
  .update-link,
  .remove-link {
      cursor: pointer;
  }

  .btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.banner {
    background-color: #000;
    font-family: Quicksand;
}


/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 82px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

body{
    height: calc(100vh - 164px);
    width: 100%;
}

.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.bg-black {
    background-color: #000;
}

.jum-bg-color {
    background-color: #d9f3f57e;
    margin-top: 100px;
}

